--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@
 	<link rel="stylesheet" type="text/css" href="slick/slick.css">
 	<link rel="stylesheet" type="text/css" href="vendors/css/jquery.fancybox_min.css">
 	<script src="vendors/js/jquery.js"></script>
-	<script src="slick/slick.js"></script>
+	<script src="slick/slick.min.js"></script>
 	<script src="vendors/js/jquery.fancybox_min.js"></script>
 	<script src="js/scripts_min.js"></script>
 
