--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
-	<link rel="stylesheet" type="text/css" href="style_min.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="icon" type="image/png" href="favicon/favicon.ico" sizes="16x16">	
 	<title>fly-studio</title>
 </head>
@@ -225,8 +225,8 @@
 						<h2>мечте!</h2>
 					</div>
 					<div class="two_cols_2">
-						<div>
-							<svg class="circle_img_3 animate leftSlice" width="234" height="310" viewBox="0 0 234 310" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+						<div class="animate leftSlice">
+							<svg class="circle_img_3" width="234" height="310" viewBox="0 0 234 310" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 								<path d="M0 117C0 52.3827 52.3827 0 117 0C181.617 0 234 52.3827 234 117V310H0V117Z" fill="url(#pattern2)"/>
 								<defs>
 								<pattern id="pattern2" patternContentUnits="objectBoundingBox" width="1" height="1">
@@ -235,7 +235,7 @@
 								<image id="image0_3_1579" width="854" height="1280" xlink:href="img/img_04.jpg"/>
 								</defs>
 							</svg>
-							<button type="button" class="cllback_btn_circle_2"></button>
+							<a href="https://api.whatsapp.com/send/?phone=+79057416955" class="cllback_btn_circle_2" target="_blanck"></a>
 						</div>
 						<div>
 							<div class="thumbnails_4_wrapp animate fadeInUp">
@@ -297,7 +297,7 @@
 										<div class="inner">
 											<h3>Обучение с нуля</h3>
 											<p>Заниматься может любой желающий, даже если у вас нет спортивного прошлого, вне зависимости от возраста и уровня подготовки - занятия в гамаках доступны каждому.</p>
-											<a href="#" class="cllback_btn_circle_2"></a>
+											<a href="https://api.whatsapp.com/send/?phone=+79057416955" class="cllback_btn_circle_2" target="_blanck"></a>
 										</div>
 									</div>
 								</div>
@@ -319,7 +319,7 @@
 										<div class="inner">
 											<h3>Индивидульный подход</h3>
 											<p>Во время групповго занятия каждому ученику уделяется достаточное кол-во ремени. Поэтому нагрузка дается по мере ваших сил и возможностей. Преподаватель контролирует и корректирует правильность выполнение элементов.</p>
-											<a href="#" class="cllback_btn_circle_2"></a>
+											<a href="https://api.whatsapp.com/send/?phone=+79057416955" class="cllback_btn_circle_2" target="_blanck"></a>
 										</div>
 									</div>
 								</div>
@@ -813,7 +813,7 @@
 						<h2><span class="title_shape title_shape_white title_shape_12"></span>и ответы</h2>
 					</div>
 					<div class="questions">
-						<div class="question_item active animate fadeInUp">
+						<div class="question_item active">
 							<div class="question_item_title">
 								<h3>смогу ли  я заниматься без физ подготовки?</h3>
 							</div>
@@ -823,7 +823,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="question_item animate fadeInUp">
+						<div class="question_item">
 							<div class="question_item_title">
 								<h3>У вас есть группы для новичков?</h3>
 							</div>
@@ -833,7 +833,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="question_item animate fadeInUp">
+						<div class="question_item">
 							<div class="question_item_title">
 								<h3>Что надеть на тренировку?</h3>
 							</div>
@@ -843,7 +843,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="question_item animate fadeInUp">
+						<div class="question_item">
 							<div class="question_item_title">
 								<h3>Вы уверены, что гамак меня выдержит?</h3>
 							</div>
@@ -939,9 +939,9 @@
 	<link rel="stylesheet" type="text/css" href="slick/slick.css">
 	<link rel="stylesheet" type="text/css" href="vendors/css/jquery.fancybox_min.css">
 	<script src="vendors/js/jquery.js"></script>
-	<script src="slick/slick.min.js"></script>
+	<script src="slick/slick.js"></script>
 	<script src="vendors/js/jquery.fancybox_min.js"></script>
-	<script src="js/scripts_min.js"></script>
+	<script src="js/scripts.js"></script>
 
 </body>
 </html>
