--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
-	<link rel="stylesheet" type="text/css" href="style_min.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="icon" type="image/png" href="favicon/favicon.ico" sizes="16x16">	
 	<title>fly-studio</title>
 </head>
@@ -646,7 +646,7 @@
 			</svg>
 
 			<div class="row">
-				<div class="sect_6">
+				<!-- <div class="sect_6">
 					<div class="h2_title h2_title_6 animate fadeInUp">
 						<h2><span class="title_shape title_shape_white title_shape_9"></span>Расписание</h2>
 						<h2>занятий</h2>
@@ -712,7 +712,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<div class="sect_7" id="testimonials">
 					<div class="h2_title h2_title_7 animate fadeInUp">
 						<h2><span class="title_shape title_shape_white title_shape_10"></span>Отзывы наших</h2>
@@ -730,22 +730,20 @@
 										</div>
 										<div>
 											<div class="testimonial_descript">
-												<p>Ахтунг! Нужно срочно поделиться Fly yoga! Кажется, моя новая страсть конечно же, после Айенгара Выйти из зоны комфорта, попробовать что-то новое - в общем, флай йога как раз об этом. 10 минут пешком от дома!!! 10, Карл!!!</p>
-												<p>Первое занятие, по началу непонятно, что за гамак, почему все качается, как отпустить руки, когда ноги держатся за тряпочку? А под конец -кувырки через себя с вытяжением всего корпуса, почти как в детстве на турниках.</p>
-												<p>Люблю перевернутые асаны, люблю в них быть, дышать, наблюдать, отпускать - как если бы в жизни</p>
+												<p>Студия просто супер! Удобное месторасположение, лучшие тренера, приемлемая цена и классная атмосфера.☺️ Индивидуальный подход к каждому. На тренировках легко разгружаешь голову после рабочего дня + получаешь красивое тело, приятное с полезным, так сказать. Студия проводит тренировки как в зале, так и на свежем воздухе А также проводит крутые мероприятия и много других классных бонусов Всем рекомендую!</p>
 											</div>
 										</div>
 										<div>
-											<div class="testimonial_author">
+											<!-- <div class="testimonial_author">
 												<img src="img/testimonial.jpg" alt="" />
-											</div>
+											</div> -->
 										</div>
 										<div>
 											<div class="author_link_wrapp">
-												<h3>Галина</h3>
-												<div>
+												<h3>Алёна Балашова</h3>
+												<!-- <div>
 													<a class="link_2" href="vk.com/yusupovagalina">vk.com/yusupovagalina</a>
-												</div>
+												</div> -->
 											</div>
 										</div>
 									</div>
@@ -761,22 +759,119 @@
 										</div>
 										<div>
 											<div class="testimonial_descript">
-												<p>Ахтунг! Нужно срочно поделиться Fly yoga! Кажется, моя новая страсть конечно же, после Айенгара Выйти из зоны комфорта, попробовать что-то новое - в общем, флай йога как раз об этом. 10 минут пешком от дома!!! 10, Карл!!!</p>
+												<!-- <p>Ахтунг! Нужно срочно поделиться Fly yoga! Кажется, моя новая страсть конечно же, после Айенгара Выйти из зоны комфорта, попробовать что-то новое - в общем, флай йога как раз об этом. 10 минут пешком от дома!!! 10, Карл!!!</p>
 												<p>Первое занятие, по началу непонятно, что за гамак, почему все качается, как отпустить руки, когда ноги держатся за тряпочку? А под конец -кувырки через себя с вытяжением всего корпуса, почти как в детстве на турниках.</p>
-												<p>Люблю перевернутые асаны, люблю в них быть, дышать, наблюдать, отпускать - как если бы в жизни</p>
+												<p>Люблю перевернутые асаны, люблю в них быть, дышать, наблюдать, отпускать - как если бы в жизни</p> -->
+												<p>Это место можно рекомендовать за то, что есть самые классные виды фитнеса</p>
 											</div>
 										</div>
 										<div>
-											<div class="testimonial_author">
+											<!-- <div class="testimonial_author">
 												<img src="img/testimonial.jpg" alt="" />
-											</div>
+											</div> -->
 										</div>
 										<div>
 											<div class="author_link_wrapp">
-												<h3>Ольга</h3>
-												<div>
+												<h3>Соня Булгакова</h3>
+												<!-- <div>
 													<a class="link_2" href="vk.com/yusupovagalina">vk.com/yusupovagalina</a>
-												</div>
+												</div> -->
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div>
+								<div class="slide_3">
+									<div class="testimonial">
+										<div>
+											<div class="testimonial_img">
+												<img src="img/" alt="" />
+											</div>
+										</div>
+										<div>
+											<div class="testimonial_descript">
+												<!-- <p>Ахтунг! Нужно срочно поделиться Fly yoga! Кажется, моя новая страсть конечно же, после Айенгара Выйти из зоны комфорта, попробовать что-то новое - в общем, флай йога как раз об этом. 10 минут пешком от дома!!! 10, Карл!!!</p>
+												<p>Первое занятие, по началу непонятно, что за гамак, почему все качается, как отпустить руки, когда ноги держатся за тряпочку? А под конец -кувырки через себя с вытяжением всего корпуса, почти как в детстве на турниках.</p>
+												<p>Люблю перевернутые асаны, люблю в них быть, дышать, наблюдать, отпускать - как если бы в жизни</p> -->
+												<p>Приятная новая студия. Понравилась тренировка джампинг на батутах и тренер.</p>
+											</div>
+										</div>
+										<div>
+											<!-- <div class="testimonial_author">
+												<img src="img/testimonial.jpg" alt="" />
+											</div> -->
+										</div>
+										<div>
+											<div class="author_link_wrapp">
+												<h3>Юлия Булгакова</h3>
+												<!-- <div>
+													<a class="link_2" href="vk.com/yusupovagalina">vk.com/yusupovagalina</a>
+												</div> -->
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div>
+								<div class="slide_3">
+									<div class="testimonial">
+										<div>
+											<div class="testimonial_img">
+												<img src="img/" alt="" />
+											</div>
+										</div>
+										<div>
+											<div class="testimonial_descript">
+												<!-- <p>Ахтунг! Нужно срочно поделиться Fly yoga! Кажется, моя новая страсть конечно же, после Айенгара Выйти из зоны комфорта, попробовать что-то новое - в общем, флай йога как раз об этом. 10 минут пешком от дома!!! 10, Карл!!!</p>
+												<p>Первое занятие, по началу непонятно, что за гамак, почему все качается, как отпустить руки, когда ноги держатся за тряпочку? А под конец -кувырки через себя с вытяжением всего корпуса, почти как в детстве на турниках.</p>
+												<p>Люблю перевернутые асаны, люблю в них быть, дышать, наблюдать, отпускать - как если бы в жизни</p> -->
+												<p>Очень хорошее расписание тренировок и доступная цена, а самое главное тренера, которые действительно очень внимательны и реально сосредоточены на результат тренировки</p>
+											</div>
+										</div>
+										<div>
+											<!-- <div class="testimonial_author">
+												<img src="img/testimonial.jpg" alt="" />
+											</div> -->
+										</div>
+										<div>
+											<div class="author_link_wrapp">
+												<h3>​Вика Яппарова</h3>
+												<!-- <div>
+													<a class="link_2" href="vk.com/yusupovagalina">vk.com/yusupovagalina</a>
+												</div> -->
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div>
+								<div class="slide_3">
+									<div class="testimonial">
+										<div>
+											<div class="testimonial_img">
+												<img src="img/" alt="" />
+											</div>
+										</div>
+										<div>
+											<div class="testimonial_descript">
+												<!-- <p>Ахтунг! Нужно срочно поделиться Fly yoga! Кажется, моя новая страсть конечно же, после Айенгара Выйти из зоны комфорта, попробовать что-то новое - в общем, флай йога как раз об этом. 10 минут пешком от дома!!! 10, Карл!!!</p>
+												<p>Первое занятие, по началу непонятно, что за гамак, почему все качается, как отпустить руки, когда ноги держатся за тряпочку? А под конец -кувырки через себя с вытяжением всего корпуса, почти как в детстве на турниках.</p>
+												<p>Люблю перевернутые асаны, люблю в них быть, дышать, наблюдать, отпускать - как если бы в жизни</p> -->
+												<p>Классная студия! Внимательные тренера, интересные тренировки, уютная атмосфера, а самое главное ДОСТУПНЫЕ ЦЕНЫ и УДОБНОЕ РАСПИСАНИЕ ! РЕКОМЕНДУЮ )</p>
+											</div>
+										</div>
+										<div>
+											<!-- <div class="testimonial_author">
+												<img src="img/testimonial.jpg" alt="" />
+											</div> -->
+										</div>
+										<div>
+											<div class="author_link_wrapp">
+												<h3>​​Галина Ульянова</h3>
+												<!-- <div>
+													<a class="link_2" href="vk.com/yusupovagalina">vk.com/yusupovagalina</a>
+												</div> -->
 											</div>
 										</div>
 									</div>
@@ -935,7 +1030,7 @@
 
 	</div>
 
-	<link rel="stylesheet" type="text/css" href="responsive_min.css">
+	<link rel="stylesheet" type="text/css" href="responsive.css">
 	<link rel="stylesheet" type="text/css" href="slick/slick.css">
 	<link rel="stylesheet" type="text/css" href="vendors/css/jquery.fancybox_min.css">
 	<script src="vendors/js/jquery.js"></script>
