--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							</div>
 						</div>
 						<div>
-							<a href="https://api.whatsapp.com/send/?phone=+79057416955" class="callback_btn_circle" target="blank"></a>
+							<a href="https://wa.me/message/XWCALI2EXWMJE1" class="callback_btn_circle" target="blank"></a>
 						</div>
 						<div>
 							<div class="thumb_01 animate fadeIn">
@@ -235,7 +235,7 @@
 								<image id="image0_3_1579" width="854" height="1280" xlink:href="img/img_04.jpg"/>
 								</defs>
 							</svg>
-							<a href="https://api.whatsapp.com/send/?phone=+79057416955" class="cllback_btn_circle_2" target="_blanck"></a>
+							<a href="https://wa.me/message/XWCALI2EXWMJE1" class="cllback_btn_circle_2" target="_blanck"></a>
 						</div>
 						<div>
 							<div class="thumbnails_4_wrapp animate fadeInUp">
@@ -297,7 +297,7 @@
 										<div class="inner">
 											<h3>Обучение с нуля</h3>
 											<p>Заниматься может любой желающий, даже если у вас нет спортивного прошлого, вне зависимости от возраста и уровня подготовки - занятия в гамаках доступны каждому.</p>
-											<a href="https://api.whatsapp.com/send/?phone=+79057416955" class="cllback_btn_circle_2" target="_blanck"></a>
+											<a href="https://wa.me/message/XWCALI2EXWMJE1" class="cllback_btn_circle_2" target="_blanck"></a>
 										</div>
 									</div>
 								</div>
@@ -319,7 +319,7 @@
 										<div class="inner">
 											<h3>Индивидульный подход</h3>
 											<p>Во время групповго занятия каждому ученику уделяется достаточное кол-во ремени. Поэтому нагрузка дается по мере ваших сил и возможностей. Преподаватель контролирует и корректирует правильность выполнение элементов.</p>
-											<a href="https://api.whatsapp.com/send/?phone=+79057416955" class="cllback_btn_circle_2" target="_blanck"></a>
+											<a href="https://wa.me/message/XWCALI2EXWMJE1" class="cllback_btn_circle_2" target="_blanck"></a>
 										</div>
 									</div>
 								</div>
@@ -478,7 +478,7 @@
 									<p>Только для новых клиентов</p>
 								</div>
 								<div class="thumb_5_footer">
-									<a href="#" class="more_link">ЗАПИСАТЬСЯ</a>
+									<a href="https://wa.me/message/XWCALI2EXWMJE1" class="more_link"  target="_blanck">ЗАПИСАТЬСЯ</a>
 								</div>
 							</div>
 							<div class="thumb_5">
@@ -488,7 +488,7 @@
 									<p></p>
 								</div>
 								<div class="thumb_5_footer">
-									<a href="#" class="more_link">ЗАПИСАТЬСЯ</a>
+									<a href="https://wa.me/message/XWCALI2EXWMJE1" class="more_link"  target="_blanck">ЗАПИСАТЬСЯ</a>
 								</div>
 							</div>
 							<div class="thumb_5">
@@ -498,7 +498,7 @@
 									<p>437 руб - 1 час</p>
 								</div>
 								<div class="thumb_5_footer">
-									<a href="#" class="more_link">ЗАПИСАТЬСЯ</a>
+									<a href="https://wa.me/message/XWCALI2EXWMJE1" class="more_link"  target="_blanck">ЗАПИСАТЬСЯ</a>
 								</div>
 							</div>
 							<div class="thumb_5">
@@ -508,7 +508,7 @@
 									<p>375 руб - 1 час</p>
 								</div>
 								<div class="thumb_5_footer">
-									<a href="#" class="more_link">ЗАПИСАТЬСЯ</a>
+									<a href="https://wa.me/message/XWCALI2EXWMJE1" class="more_link"  target="_blanck">ЗАПИСАТЬСЯ</a>
 								</div>
 							</div>
 						</div>
@@ -557,7 +557,7 @@
 									<p>1 человек</p>
 								</div>
 								<div class="thumb_5_footer">
-									<a href="#" class="more_link">ЗАПИСАТЬСЯ</a>
+									<a href="https://wa.me/message/XWCALI2EXWMJE1" class="more_link" target="_blanck">ЗАПИСАТЬСЯ</a>
 								</div>
 							</div>
 							<div class="thumb_5 thumb_5_2">
@@ -567,7 +567,7 @@
 									<p>Аренда зала (1 час)</p>
 								</div>
 								<div class="thumb_5_footer">
-									<a href="#" class="more_link">ЗАПИСАТЬСЯ</a>
+									<a href="https://wa.me/message/XWCALI2EXWMJE1" class="more_link" target="_blanck">ЗАПИСАТЬСЯ</a>
 								</div>
 							</div>
 						</div>
@@ -759,9 +759,6 @@
 										</div>
 										<div>
 											<div class="testimonial_descript">
-												<!-- <p>Ахтунг! Нужно срочно поделиться Fly yoga! Кажется, моя новая страсть конечно же, после Айенгара Выйти из зоны комфорта, попробовать что-то новое - в общем, флай йога как раз об этом. 10 минут пешком от дома!!! 10, Карл!!!</p>
-												<p>Первое занятие, по началу непонятно, что за гамак, почему все качается, как отпустить руки, когда ноги держатся за тряпочку? А под конец -кувырки через себя с вытяжением всего корпуса, почти как в детстве на турниках.</p>
-												<p>Люблю перевернутые асаны, люблю в них быть, дышать, наблюдать, отпускать - как если бы в жизни</p> -->
 												<p>Это место можно рекомендовать за то, что есть самые классные виды фитнеса</p>
 											</div>
 										</div>
@@ -791,9 +788,6 @@
 										</div>
 										<div>
 											<div class="testimonial_descript">
-												<!-- <p>Ахтунг! Нужно срочно поделиться Fly yoga! Кажется, моя новая страсть конечно же, после Айенгара Выйти из зоны комфорта, попробовать что-то новое - в общем, флай йога как раз об этом. 10 минут пешком от дома!!! 10, Карл!!!</p>
-												<p>Первое занятие, по началу непонятно, что за гамак, почему все качается, как отпустить руки, когда ноги держатся за тряпочку? А под конец -кувырки через себя с вытяжением всего корпуса, почти как в детстве на турниках.</p>
-												<p>Люблю перевернутые асаны, люблю в них быть, дышать, наблюдать, отпускать - как если бы в жизни</p> -->
 												<p>Приятная новая студия. Понравилась тренировка джампинг на батутах и тренер.</p>
 											</div>
 										</div>
@@ -823,9 +817,6 @@
 										</div>
 										<div>
 											<div class="testimonial_descript">
-												<!-- <p>Ахтунг! Нужно срочно поделиться Fly yoga! Кажется, моя новая страсть конечно же, после Айенгара Выйти из зоны комфорта, попробовать что-то новое - в общем, флай йога как раз об этом. 10 минут пешком от дома!!! 10, Карл!!!</p>
-												<p>Первое занятие, по началу непонятно, что за гамак, почему все качается, как отпустить руки, когда ноги держатся за тряпочку? А под конец -кувырки через себя с вытяжением всего корпуса, почти как в детстве на турниках.</p>
-												<p>Люблю перевернутые асаны, люблю в них быть, дышать, наблюдать, отпускать - как если бы в жизни</p> -->
 												<p>Очень хорошее расписание тренировок и доступная цена, а самое главное тренера, которые действительно очень внимательны и реально сосредоточены на результат тренировки</p>
 											</div>
 										</div>
@@ -855,9 +846,6 @@
 										</div>
 										<div>
 											<div class="testimonial_descript">
-												<!-- <p>Ахтунг! Нужно срочно поделиться Fly yoga! Кажется, моя новая страсть конечно же, после Айенгара Выйти из зоны комфорта, попробовать что-то новое - в общем, флай йога как раз об этом. 10 минут пешком от дома!!! 10, Карл!!!</p>
-												<p>Первое занятие, по началу непонятно, что за гамак, почему все качается, как отпустить руки, когда ноги держатся за тряпочку? А под конец -кувырки через себя с вытяжением всего корпуса, почти как в детстве на турниках.</p>
-												<p>Люблю перевернутые асаны, люблю в них быть, дышать, наблюдать, отпускать - как если бы в жизни</p> -->
 												<p>Классная студия! Внимательные тренера, интересные тренировки, уютная атмосфера, а самое главное ДОСТУПНЫЕ ЦЕНЫ и УДОБНОЕ РАСПИСАНИЕ ! РЕКОМЕНДУЮ )</p>
 											</div>
 										</div>
@@ -1013,7 +1001,7 @@
 						<p class="copyright">2022. Flystudio</p>
 					</div>
 					<div>
-						<a href="#" class="studio_link">
+						<a href="https://antipovart.com/" target="_blanck" class="studio_link">
 							<div>
 								<p>Сайт разработан в </p>
 							</div>
