--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 								<div class="thumb_01_header">
 									<p>Получите 50% скидку на первое пробное занятие</p>
 								</div>
-								<a href="https://youtu.be/0RyGpZptMMo" data-fancybox="video" class="video_thumb">
+								<a href="https://youtube.com/shorts/SfLsgXoTrlU?feature=share" data-fancybox="video" class="video_thumb">
 									<img src="img/img_02.jpg" alt="" />
 								</a>
 							</div>
@@ -270,6 +270,7 @@
 					<div class="slider_1">
 						<div class="slide_1" style="background-image: url(img/slide_1.jpg)"></div>
 						<div class="slide_1" style="background-image: url(img/slide_2.jpg)"></div>
+						<div class="slide_1" style="background-image: url(img/slide_4.jpg)"></div>
 					</div>
 					<div class="slider_1_arrows"></div>
 				</div>
@@ -345,7 +346,7 @@
 				<div class="articles">
 					<div class="article animate fadeInUp">
 						<div>
-							<a href="https://youtu.be/0RyGpZptMMo" data-fancybox="video-gallery_1" class="article_img_box">
+							<a href="https://youtube.com/shorts/rlJIJROdqIw?feature=share" data-fancybox="video-gallery_1" class="article_img_box">
 								<img src="img/article_01.jpg" alt="" />
 							</a>
 						</div>
@@ -725,7 +726,7 @@
 									<div class="testimonial">
 										<div>
 											<div class="testimonial_img">
-												<img src="img/" alt="" />
+												<img src="img/testimonial_01.jpg" alt="" />
 											</div>
 										</div>
 										<div>
@@ -734,9 +735,9 @@
 											</div>
 										</div>
 										<div>
-											<!-- <div class="testimonial_author">
-												<img src="img/testimonial.jpg" alt="" />
-											</div> -->
+											<div class="testimonial_author">
+												<img src="img/testimonial_01_author.jpg" alt="" />
+											</div>
 										</div>
 										<div>
 											<div class="author_link_wrapp">
@@ -754,7 +755,7 @@
 									<div class="testimonial">
 										<div>
 											<div class="testimonial_img">
-												<img src="img/" alt="" />
+												<img src="img/testimonial_02.jpg" alt="" />
 											</div>
 										</div>
 										<div>
@@ -783,7 +784,7 @@
 									<div class="testimonial">
 										<div>
 											<div class="testimonial_img">
-												<img src="img/" alt="" />
+												<img src="img/testimonial_03.jpg" alt="" />
 											</div>
 										</div>
 										<div>
@@ -812,7 +813,7 @@
 									<div class="testimonial">
 										<div>
 											<div class="testimonial_img">
-												<img src="img/" alt="" />
+												<img src="img/testimonial_04.jpg" alt="" />
 											</div>
 										</div>
 										<div>
@@ -841,7 +842,7 @@
 									<div class="testimonial">
 										<div>
 											<div class="testimonial_img">
-												<img src="img/" alt="" />
+												<img src="img/testimonial_05.jpg" alt="" />
 											</div>
 										</div>
 										<div>
@@ -884,7 +885,13 @@
 								<div class="slide_4" style="background: url(img/slide_3.jpg)"></div>
 							</div>
 							<div>
-								<div class="slide_4" style="background: url(img/slide_2.jpg)"></div>
+								<div class="slide_4" style="background: url(img/slide_5.jpg)"></div>
+							</div>
+							<div>
+								<div class="slide_4" style="background: url(img/slide_6.jpg)"></div>
+							</div>
+							<div>
+								<div class="slide_4" style="background: url(img/slide_7.jpg)"></div>
 							</div>
 						</div>
 						<div class="slider_4_arrows"></div>
@@ -968,8 +975,8 @@
 								<div class="thumb_4 white">
 									<h3>соцсети</h3>
 									<ul class="soc_links">
-										<li><a href="#">Вконтакте</a></li>
-										<li><a href="#">Youtube</a></li>
+										<li><a href="https://vk.com/fly_studio_krd">Вконтакте</a></li>
+										<li><a href="https://youtube.com/shorts/SfLsgXoTrlU?feature=share">Youtube</a></li>
 									</ul>
 								</div>
 								<div class="thumb_4_img">
