--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 								<div class="thumb_01_header">
 									<p>Получите 50% скидку на первое пробное занятие</p>
 								</div>
-								<a href="https://youtube.com/shorts/SfLsgXoTrlU?feature=share" data-fancybox="video" class="video_thumb">
+								<a href="https://youtu.be/SfLsgXoTrlU" data-fancybox="video" class="video_thumb">
 									<img src="img/img_02.jpg" alt="" />
 								</a>
 							</div>
@@ -346,7 +346,7 @@
 				<div class="articles">
 					<div class="article animate fadeInUp">
 						<div>
-							<a href="https://youtube.com/shorts/rlJIJROdqIw?feature=share" data-fancybox="video-gallery_1" class="article_img_box">
+							<a href="https://youtu.be/rlJIJROdqIw" data-fancybox="video-gallery_1" class="article_img_box">
 								<img src="img/article_01.jpg" alt="" />
 							</a>
 						</div>
