--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 								<div class="thumb_01_header">
 									<p>Получите 50% скидку на первое пробное занятие</p>
 								</div>
-								<a href="https://youtu.be/SfLsgXoTrlU" data-fancybox="video" class="video_thumb">
+								<a target="_blank" href="https://youtu.be/SfLsgXoTrlU" data-fancybox="video" class="video_thumb">
 									<img src="img/img_02.jpg" alt="" />
 								</a>
 							</div>
@@ -346,7 +346,7 @@
 				<div class="articles">
 					<div class="article animate fadeInUp">
 						<div>
-							<a href="https://youtu.be/rlJIJROdqIw" data-fancybox="video-gallery_1" class="article_img_box">
+							<a target="_blank" href="https://youtu.be/rlJIJROdqIw" data-fancybox="video-gallery_1" class="article_img_box">
 								<img src="img/article_01.jpg" alt="" />
 							</a>
 						</div>
@@ -363,7 +363,7 @@
 					</div>
 					<div class="article animate fadeInUp">
 						<div>
-							<a href="https://youtu.be/0RyGpZptMMo" data-fancybox="video-gallery_2" class="article_img_box">
+							<a target="_blank" href="https://youtu.be/0RyGpZptMMo" data-fancybox="video-gallery_2" class="article_img_box">
 								<img src="img/article_02.jpg" alt="" />
 							</a>
 						</div>
@@ -380,7 +380,7 @@
 					</div>
 					<div class="article animate fadeInUp">
 						<div>
-							<a href="https://youtu.be/0RyGpZptMMo" data-fancybox="video-gallery_3" class="article_img_box">
+							<a target="_blank" href="https://youtu.be/0RyGpZptMMo" data-fancybox="video-gallery_3" class="article_img_box">
 								<img src="img/article_03.jpg" alt="" />
 							</a>
 						</div>
@@ -397,7 +397,7 @@
 					</div>
 					<div class="article animate fadeInUp">
 						<div>
-							<a href="https://youtu.be/0RyGpZptMMo" data-fancybox="video-gallery_4" class="article_img_box">
+							<a target="_blank" href="https://youtu.be/0RyGpZptMMo" data-fancybox="video-gallery_4" class="article_img_box">
 								<img src="img/article_04.jpg" alt="" />
 							</a>
 						</div>
@@ -414,7 +414,7 @@
 					</div>
 					<div class="article animate fadeInUp">
 						<div>
-							<a href="https://youtu.be/0RyGpZptMMo" data-fancybox="video-gallery_5" class="article_img_box">
+							<a target="_blank" href="https://youtu.be/0RyGpZptMMo" data-fancybox="video-gallery_5" class="article_img_box">
 								<img src="img/article_05.jpg" alt="" />
 							</a>
 						</div>
@@ -975,8 +975,8 @@
 								<div class="thumb_4 white">
 									<h3>соцсети</h3>
 									<ul class="soc_links">
-										<li><a href="https://vk.com/fly_studio_krd">Вконтакте</a></li>
-										<li><a href="https://youtube.com/shorts/SfLsgXoTrlU?feature=share">Youtube</a></li>
+										<li><a target="_blank" href="https://vk.com/fly_studio_krd">Вконтакте</a></li>
+										<li><a target="_blank" href="https://youtube.com/shorts/SfLsgXoTrlU?feature=share">Youtube</a></li>
 									</ul>
 								</div>
 								<div class="thumb_4_img">
