--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 					</div>
 					<div class="article animate fadeInUp">
 						<div>
-							<a target="_blank" href="https://youtu.be/0RyGpZptMMo" data-fancybox="video-gallery_3" class="article_img_box">
+							<a target="_blank" href="https://youtu.be/iUtYZWAIKI8" data-fancybox="video-gallery_3" class="article_img_box">
 								<img src="img/article_03.jpg" alt="" />
 							</a>
 						</div>
@@ -397,7 +397,7 @@
 					</div>
 					<div class="article animate fadeInUp">
 						<div>
-							<a target="_blank" href="https://youtu.be/0RyGpZptMMo" data-fancybox="video-gallery_4" class="article_img_box">
+							<a target="_blank" href="https://youtu.be/0Lxuw811qr8" data-fancybox="video-gallery_4" class="article_img_box">
 								<img src="img/article_04.jpg" alt="" />
 							</a>
 						</div>
@@ -414,7 +414,7 @@
 					</div>
 					<div class="article animate fadeInUp">
 						<div>
-							<a target="_blank" href="https://youtu.be/0RyGpZptMMo" data-fancybox="video-gallery_5" class="article_img_box">
+							<a target="_blank" href="https://youtu.be/j7T-ZflILWw" data-fancybox="video-gallery_5" class="article_img_box">
 								<img src="img/article_05.jpg" alt="" />
 							</a>
 						</div>
@@ -905,21 +905,22 @@
 					<div class="questions">
 						<div class="question_item active">
 							<div class="question_item_title">
-								<h3>смогу ли  я заниматься без физ подготовки?</h3>
+								<h3>СМОГУ ЛИ Я ЗАНИМАТЬСЯ БЕЗ ФИЗ ПОДГОТОВКИ?</h3>
 							</div>
 							<div class="question_item_dropdown">
 								<div>
-									<p>В нашей студии проходит обучение с нуля, специально для тех, у кого нет спортивного прошлого, вне зависимости от возраста и уровня подготовки!</p>
+									<p>В нашей студии проходят тренировки  специально для тех, у кого нет спортивного прошлого, вне зависимости от возраста и уровня подготовки!</p>
 								</div>
 							</div>
 						</div>
 						<div class="question_item">
 							<div class="question_item_title">
-								<h3>У вас есть группы для новичков?</h3>
+								<h3>У ВАС ЕСТЬ ГРУППЫ ДЛЯ НОВИЧКОВ ?</h3>
 							</div>
 							<div class="question_item_dropdown">
 								<div>
-									<p>В нашей студии проходит обучение с нуля, специально для тех, у кого нет спортивного прошлого, вне зависимости от возраста и уровня подготовки!</p>
+									<p>Вы можете начать заниматься в любой группе!</p>
+									<p>Во время группового занятия каждому ученику уделяется достаточное количество времени, поэтому нагрузка дается по мере ваших сил и возможностей. Преподаватель контролирует и корректирует правильность выполнение элементов.</p> 
 								</div>
 							</div>
 						</div>
@@ -929,7 +930,8 @@
 							</div>
 							<div class="question_item_dropdown">
 								<div>
-									<p>В нашей студии проходит обучение с нуля, специально для тех, у кого нет спортивного прошлого, вне зависимости от возраста и уровня подготовки!</p>
+									<p>Лосины, футболку, кроссовки</p>
+									<p>Так же возьмите с собой бутылочку с водой</p>
 								</div>
 							</div>
 						</div>
@@ -939,7 +941,19 @@
 							</div>
 							<div class="question_item_dropdown">
 								<div>
-									<p>В нашей студии проходит обучение с нуля, специально для тех, у кого нет спортивного прошлого, вне зависимости от возраста и уровня подготовки!</p>
+									<p>Батуты выдерживают до 90 кг.</p>
+									<p>Йога гамаки до 150 кг.</p>
+									<p>Все оборудование установленное в студии профессиональное</p>
+								</div>
+							</div>
+						</div>
+						<div class="question_item">
+							<div class="question_item_title">
+								<h3>КАК ЗАПИСАТЬСЯ НА ТРЕНИРОВКУ ?</h3>
+							</div>
+							<div class="question_item_dropdown">
+								<div>
+									<p>Все занятия проходят по предварительной записи у администратора по телефону +79667663610</p>
 								</div>
 							</div>
 						</div>
